feat: first day in engenharia de dados

--- a/coding_tanking/coding_tanking_aula_1.ipynb
+++ b/coding_tanking/coding_tanking_aula_1.ipynb
@@ -453,10 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "3a85f961",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seu nome é Marcelle, tem 26 anos e seu hobbie favorito ioga\n"
+     ]
+    }
+   ],
    "source": [
     "nome = input(\"Digite seu nome: \")\n",
     "idade = input(\"Digite sua idade: \")\n",
