feat: list random

--- a/M_1_logic/4. Aula 04 - Strings, dicionários & funções.ipynb
+++ b/M_1_logic/4. Aula 04 - Strings, dicionários & funções.ipynb
@@ -1873,63 +1873,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' def myfunc(n):\\n  return lambda a : a * n\\n\\nmytripler = myfunc(n = 3)\\n\\nprint(mytripler(11)) '"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import pandas as pd\n",
+    "import time\n",
     "# ter uma lista para cada um dos dados\n",
     "# randomizar a criação dos dados\n",
     "# randomizar a criação dos relacionamentos\n",
     "# gerar os dados em JSON dict -> salvar num arquivo txt ou csv\n",
-    "aluno = [\"Ana\", \"Maria\", \"Marta\"]\n",
-    "professor = [\"Sofia\", \"Lara\"]\n",
-    "materia = [\"Matemática\", \"Lógica\"]\n",
     "\n",
-    "def getDataAleatory(list):\n",
-    "    return random.choice(list)\n",
     "\n",
-    "random_aluno = getDataAleatory(aluno)\n",
-    "random_professor = getDataAleatory(professor)\n",
-    "random_materia = getDataAleatory(materia)\n",
+    "def random_entidades():\n",
+    "    ''' Listas de valores '''\n",
+    "    aluno_lista = [\"Ana\", \"Maria\", \"Marta\"]\n",
+    "    p_nome = ['Paulo', 'Maria', 'Pedro']\n",
+    "    p_idade = [34, 48, 52]\n",
+    "    n_materia = ['História', 'Português', 'Matemática']\n",
+    "    sexo = [\"F\", \"M\", \"Outro\"]\n",
+    "    m_carga = [60, 50, 100]\n",
+    "    m_dia = ['Segunda', 'Quarta', 'Sexta']\n",
     "\n",
-    "dicionario_randomizado = [{\n",
-    "  \"aluno\" : random_aluno,\n",
-    "  \"professor\" : random_professor,\n",
-    "  \"materia\" : random_materia\n",
-    "},\n",
-    "{\n",
-    "  \"aluno\" : random_aluno,\n",
-    "  \"professor\" : random_professor,\n",
-    "  \"materia\" : random_materia\n",
-    "},\n",
-    "{\n",
-    "  \"aluno\" : random_aluno,\n",
-    "  \"professor\" : random_professor,\n",
-    "  \"materia\" : random_materia\n",
-    "}]\n",
     "\n",
-    "df = pd.DataFrame(dicionario_randomizado)\n",
-    "df.to_csv('dicionario_randomizado.csv', index=False, header=True)\n",
+    "    aluno = {\n",
+    "      \"nome\": random.choice(aluno_lista),\n",
+    "      \"matricula\": random.choice(range(1111,9999)),\n",
+    "      \"sexo\": random.choice(sexo),\n",
+    "    }\n",
+    "    professor = {\n",
+    "      \"nome\": random.choice(p_nome),\n",
+    "      \"idade\": random.choice(p_idade),\n",
+    "      \"sexo\": random.choice(sexo),\n",
+    "    }\n",
+    "    materia = {\n",
+    "      \"nome\": random.choice(n_materia),\n",
+    "      \"carga\": random.choice(m_carga),\n",
+    "      \"dia\": random.choice(m_dia),\n",
+    "    }\n",
     "\n",
-    "\"\"\" def myfunc(n):\n",
-    "  return lambda a : a * n\n",
+    "    entidades = { \"aluno\": aluno, \"professor\": professor, \"matéria\": materia}\n",
+    "    return entidades\n",
     "\n",
-    "mytripler = myfunc(n = 3)\n",
+    "lista_random = list()\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "    entidade = random_entidades()\n",
+    "    lista_random.append(entidade)\n",
+    "    time.sleep(7)\n",
     "\n",
-    "print(mytripler(11)) \"\"\""
+    "    df = pd.DataFrame(lista_random)\n",
+    "    df.to_csv('dicionario_randomizado.csv', index=False, header=True)\n",
+    "    i += 1"
    ]
   }
  ],
