Iniciando modulo de tecnicas de programacao

--- a/class/M_1_logic/5. Aula 05 - Funções, arquivos & exceções.ipynb
+++ b/class/M_1_logic/5. Aula 05 - Funções, arquivos & exceções.ipynb
@@ -1195,33 +1195,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ImportError",
+     "evalue": "no pq wrapper available.\nAttempts made:\n- couldn't import psycopg 'c' implementation: No module named 'psycopg_c'\n- couldn't import psycopg 'binary' implementation: No module named 'psycopg_binary'\n- couldn't import psycopg 'python' implementation: libpq library not found",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpsycopg\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# dataset: https://www.splitgraph.com/austintexas-gov/strategic-measureinfant-mortality-rate-number-of-qxch-wiie\u001b[39;00m\n\u001b[1;32m      4\u001b[0m API_KEY \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/psycopg/__init__.py:9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# Copyright (C) 2020 The Psycopg Team\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlogging\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m pq  \u001b[39m# noqa: F401 import early to stabilize side effects\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m types\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m postgres\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/psycopg/pq/__init__.py:114\u001b[0m\n\u001b[1;32m    105\u001b[0m         sattempts \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m- \u001b[39m\u001b[39m{\u001b[39;00mattempt\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m attempt \u001b[39min\u001b[39;00m attempts)\n\u001b[1;32m    106\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[1;32m    107\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39m\\\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[39mno pq wrapper available.\u001b[39m\n\u001b[1;32m    109\u001b[0m \u001b[39mAttempts made:\u001b[39m\n\u001b[1;32m    110\u001b[0m \u001b[39m{\u001b[39;00msattempts\u001b[39m}\u001b[39;00m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m    111\u001b[0m         )\n\u001b[0;32m--> 114\u001b[0m import_from_libpq()\n\u001b[1;32m    116\u001b[0m __all__ \u001b[39m=\u001b[39m (\n\u001b[1;32m    117\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mConnStatus\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    118\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mPipelineStatus\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mversion\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    133\u001b[0m )\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/psycopg/pq/__init__.py:106\u001b[0m, in \u001b[0;36mimport_from_libpq\u001b[0;34m()\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    105\u001b[0m         sattempts \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m- \u001b[39m\u001b[39m{\u001b[39;00mattempt\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mfor\u001b[39;00m attempt \u001b[39min\u001b[39;00m attempts)\n\u001b[0;32m--> 106\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[1;32m    107\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39m\\\u001b[39;00m\n\u001b[1;32m    108\u001b[0m \u001b[39mno pq wrapper available.\u001b[39m\n\u001b[1;32m    109\u001b[0m \u001b[39mAttempts made:\u001b[39m\n\u001b[1;32m    110\u001b[0m \u001b[39m{\u001b[39;00msattempts\u001b[39m}\u001b[39;00m\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m    111\u001b[0m         )\n",
+      "\u001b[0;31mImportError\u001b[0m: no pq wrapper available.\nAttempts made:\n- couldn't import psycopg 'c' implementation: No module named 'psycopg_c'\n- couldn't import psycopg 'binary' implementation: No module named 'psycopg_binary'\n- couldn't import psycopg 'python' implementation: libpq library not found"
      ]
     }
    ],
    "source": [
-    "import psycopg2\n",
+    "import psycopg\n",
+    "# dataset: https://www.splitgraph.com/austintexas-gov/strategic-measureinfant-mortality-rate-number-of-qxch-wiie\n",
     "\n",
-    "API_KEY = \"Seu username\"\n",
-    "API_SECRET = \"Seu password\"\n",
+    "API_KEY = \"\"\n",
+    "API_SECRET = \"\"\n",
     "\n",
-    "QUERY = \"\"\"SELECT candidate_normalized, SUM(votes)::integer AS total_votes\n",
-    "    FROM \"splitgraph/2016_election:latest\".precinct_results\n",
-    "    WHERE state_postal = 'CA'\n",
-    "    GROUP BY candidate_normalized\n",
-    "    ORDER BY total_votes DESC\n",
-    "    LIMIT 5\n",
+    "QUERY = \"\"\"SELECT\n",
+    "    \":id\", -- Socrata column ID\n",
+    "    \"infant_mortality_rate_per\", -- This is a calculation of infant deaths divided by infant births then multiplied by 1,000\n",
+    "    \"date_time\", -- This is a reporting date time variable used to produce the measure for this dataset.\n",
+    "    \"year\" -- Year of Death Report\n",
+    "FROM\n",
+    "    \"austintexas-gov/strategic-measureinfant-mortality-rate-number-of-qxch-wiie:latest\".\"strategic_measureinfant_mortality_rate_number_of\"\n",
+    "LIMIT 100;\n",
     "\"\"\"\n",
     "\n",
-    "with psycopg2.connect(\n",
+    "with psycopg.connect(\n",
     "    dsn=f\"postgresql://{API_KEY}:{API_SECRET}@data.splitgraph.com:5432/ddn?application_name=psycopg2\"\n",
     ") as conn:\n",
     "    with conn.cursor() as cur:\n",
@@ -1233,7 +1242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1247,12 +1256,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6a926afa313b26ae1264fdcf81c726a97e69f6ba2ba780f6aa901948710f8d6e"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
