--- a/class/M_1_logic/4. Aula 04 - Strings, dicionários & funções.ipynb
+++ b/class/M_1_logic/4. Aula 04 - Strings, dicionários & funções.ipynb
@@ -1873,96 +1873,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "import pandas as pd\n",
-    "import time\n",
-    "# ter uma lista para cada um dos dados\n",
-    "# randomizar a criação dos dados\n",
-    "# randomizar a criação dos relacionamentos\n",
-    "# gerar os dados em JSON dict -> salvar num arquivo txt ou csv\n",
+    "def myfunc(n):\n",
+    "  return lambda a : a * n\n",
     "\n",
-    "''' Listas de valores '''\n",
-    "aluno_lista = [\"Ana\", \"Maria\", \"Marta\"]\n",
-    "p_nome = ['Paulo', 'Maria', 'Pedro']\n",
-    "p_idade = [34, 48, 52]\n",
-    "n_materia = ['História', 'Português', 'Matemática']\n",
-    "sexo = [\"F\", \"M\", \"Outro\"]\n",
-    "m_carga = [60, 50, 100]\n",
-    "m_dia = ['Segunda', 'Quarta', 'Sexta']\n",
+    "mytripler = myfunc(n = 3)\n",
     "\n",
-    "def random_entidades():\n",
-    "    aluno = {k:random.choice(v) for k, v in zip([\"nome\", \"matricula\", \"sexo\"], [aluno_lista, range(1111,9999), sexo])}\n",
-    "    \"\"\" {\n",
-    "      \"nome\": random.choice(aluno_lista),\n",
-    "      \"matricula\": random.choice(range(1111,9999)),\n",
-    "      \"sexo\": random.choice(sexo),\n",
-    "    } \"\"\"\n",
-    "    professor = {k:random.choice(v) for k, v in zip([\"nome\", \"idade\", \"sexo\"], [p_nome, p_idade, sexo])}\n",
-    "    \"\"\" {\n",
-    "      \"nome\": random.choice(p_nome),\n",
-    "      \"idade\": random.choice(p_idade),\n",
-    "      \"sexo\": random.choice(sexo),\n",
-    "    } \"\"\"\n",
-    "    materia = {k:random.choice(v) for k, v in zip([\"nome\", \"carga\", \"dia\"], [n_materia, m_carga, m_dia])}\n",
-    "    \"\"\" {\n",
-    "      \"nome\": random.choice(n_materia),\n",
-    "      \"carga\": random.choice(m_carga),\n",
-    "      \"dia\": random.choice(m_dia),\n",
-    "    } \"\"\"\n",
-    "\n",
-    "    entidades = { \"aluno\": aluno, \"professor\": professor, \"matéria\": materia}\n",
-    "    return entidades\n",
-    "\n",
-    "def random_aluno():\n",
-    "    return {k:random.choice(v) for k, v in zip([\"nome\", \"matricula\", \"sexo\"], [aluno_lista, range(1111,9999), sexo])}\n",
-    "\n",
-    "def random_professor():\n",
-    "    return {k:random.choice(v) for k, v in zip([\"nome\", \"idade\", \"sexo\"], [p_nome, p_idade, sexo])}\n",
-    "\n",
-    "def random_materia():\n",
-    "    return {k:random.choice(v) for k, v in zip([\"nome\", \"carga\", \"dia\"], [n_materia, m_carga, m_dia])}\n",
-    "\n",
-    "aluno_random = list()\n",
-    "professor_random = list()\n",
-    "materia_random = list()\n",
-    "list_relationship_random = list()\n",
-    "i = 0\n",
-    "while i < 10:\n",
-    "    aluno = random_aluno()\n",
-    "    aluno_random.append(aluno)\n",
-    "\n",
-    "    professor = random_professor()\n",
-    "    professor_random.append(professor)\n",
-    "\n",
-    "    materia = random_materia()\n",
-    "    materia_random.append(materia)\n",
-    "\n",
-    "    relationship = random_entidades()\n",
-    "    list_relationship_random.append(relationship)\n",
-    "    time.sleep(7)\n",
-    "\n",
-    "    df = pd.DataFrame(aluno_random)\n",
-    "    df.to_csv('aluno_randomizado.csv', index=False, header=True)\n",
-    "\n",
-    "    df = pd.DataFrame(professor_random)\n",
-    "    df.to_csv('professor_randomizado.csv', index=False, header=True)\n",
-    "\n",
-    "    df = pd.DataFrame(materia_random)\n",
-    "    df.to_csv('materia_randomizado.csv', index=False, header=True)\n",
-    "\n",
-    "    df = pd.DataFrame(list_relationship_random)\n",
-    "    df.to_csv('relationship_randomizado.csv', index=False, header=True)\n",
-    "    i += 1"
+    "print(mytripler(11))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.8.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1976,12 +1902,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "6a926afa313b26ae1264fdcf81c726a97e69f6ba2ba780f6aa901948710f8d6e"
    }
   }
  },
